# icqsol

./: CMakeLists.txt  LICENSE  README  README.md  checkOutput.sh  setup.py
bem/: icqBaseLaplaceSolver.py  icqBaseSolver.py  icqFunctor.cpp  icqFunctor.hpp  icqLaplaceFunctor.cpp  icqLaplaceFunctor.h  icqLaplaceFunctor.hpp  icqLaplaceMatrices.cpp  icqLaplaceMatrices.h  icqLaplaceMatrices.py  icqLaplaceMatrices2.py  icqLaplaceSingleLayerMatrix.py  icqLaplaceSolver.py  icqPoissonSolver.py  icqPotentialIntegrals.py  icqQuadrature.cpp  icqQuadrature.h  icqQuadrature.hpp  icqQuadrature.py  icqQuadrature1D.py  icqReferenceTriangle.py
color/: icqColorMap.py  testColorMap.py
csg/: icqInsideLocator.cpp  icqInsideLocator.h  icqInsideLocator.hpp  icqPointInsideVtkPolyData.cpp  icqPointInsideVtkPolyData.hpp
data/: 2triangles.vtk  a1.vtk  b1.vtk  plate.vtk  refined_surface_field.vtk  simpleCoarsingInput.vtk  simpleColorCell.vtk  simpleColorPoint.vtk  sphere4x2.vtk  surface_field.vtk  tet.vtk  tin.vtk
discretization/: finiteElementIntegrals.py
examples/: addSurfaceFieldFromExpression.py  addTexture.py  coarsenShape.py  coarsenSurface.py  colorSurfaceField.py  composeShapes.py  createPrimitiveShape.py  integrateSurfaceField.py  refineShape.py  refineSurface.py  rotateShape.py  scaleShape.py  solveLaplace.py  translateShape.py
quadrature/: icqQuadratureTriangle.py  toto
scripts/: modify.py  print_function.py  test_print_function.py
shapes/: icqCoarsenSurface.py  icqInside.py  icqRefineSurface.py  icqShape.py  icqShapeManager.py  icqSmoothSurface.py  icqTriangulation.py
solvers/: icqConjugateGradient.py
test_results/: cylInner.ply  cylOuter.ply  ring2.vtk  ringCoarse.vtk  t.vtk  tColored.vtk  testBolt.vtk  testBoltFine.vtk  testBoltFineColored_0.vtk  testBoltFineColored_1.vtk  testBoltFineWithField3.vtk  testCompositeIntersection.vtk  testCompositeRemoval.vtk  testCompositeUnion.vtk  testCreateCone.vtk  testCreateCylinder.vtk  testCreateSphere.vtk  testInsideOtherShape_BoxBox_a.vtk  testInsideOtherShape_BoxBox_b.vtk  testInsideOtherShape_BoxBox_result.vtk  testInsideOtherShape_BoxSphere_a.vtk  testInsideOtherShape_BoxSphere_b.vtk  testInsideOtherShape_BoxSphere_result.vtk  testPrimitiveBox.vtk  testPrimitiveBoxCheckerboard.vtk  testPrimitiveBoxStone.vtk  testPrimitiveBoxWood.vtk  testPrimitiveCone.vtk  testPrimitiveCylinder.ply  testPrimitiveCylinderWithField.vtk  testPrimitiveCylinderWithField.vtk.ply  testPrimitiveCylinderWithFieldColored.vtk  testPrimitiveCylinderWithTimeDependentField.vtk  testPrimitiveSphere.vtk  testPrimitiveSphere4x4.vtk  testPrimitiveSphere8x8.vtk  testPrimitiveSphereHot.vtk  testPrimitiveSphereWithField.ply  testPrimitiveSphereWithField.vtk  testRefineWithCellField.vtk  (+6 more)
tests/: testBolt.py  testColorMap.py  testColormaps.py  testCreateBox.py  testCreateCone.py  testCreateCylinder.py  testCreateSphere.py  testFromPolygons.py  testGKMatrices.py  testGMatrix.py  testHollowSphere.py  testInsideLocatorCpp.py  testIntersection.py  testLaplace.py  testLaplace2.py  testPointInsideShape.py  testPotentialIntegrals.py  testQuadrature.py  testQuadratureCpp.py  testRefineCoarsen.py  testRing.py  testSaveLoad.py  testStructuredGridRead.py  testSubtraction.py  testSubtractionCylinders.py  testSurfaceInsideOtherShape.py  testToPolygons.py  testUnion.py  testUnionCones.py  testUnionCylinders.py  testUnstructuredGridRead.py
tests/geometry/: testBolt.py  testCreateBox.py  testCreateCone.py  testCreateCylinder.py  testCreateSphere.py  testFromPolygons.py  testIntersection.py  testPointInsideShape.py  testRing.py  testSaveLoad.py  testStructuredGridRead.py  testSubtraction.py  testSubtractionCylinders.py  testSurfaceInsideOtherShape.py  testToPolygons.py  testUnion.py  testUnionCones.py  testUnionCylinders.py  testUnstructuredGridRead.py
tests/tools/geometry/: testBolt.py  testCreateBox.py  testCreateCone.py  testCreateCylinder.py  testCreateSphere.py  testFromPolygons.py  testInsideOtherShape.py  testIntersection.py  testIntersectionCylinders.py  testPipe.py  testPointInsideShape.py  testPolygon.py  testRing.py  testSaveLoad.py  testScrew.py  testSubtraction.py  testSubtractionCylinders.py  testToPolygons.py  testUnion.py  testUnionCones.py  testUnionCylinders.py
tools/color/: icqColorMap.py
tools/common/: icqPLYWriter.py
tools/discretization/: finiteElementIntegrals.py
tools/geometry/: addSurfaceFieldFromExpression.py  buildGeometry.py  createCompositeShape.py  createPrimitiveShape.py  createSurfaceFieldFromExpression.py  icqBaseShape.py  icqBox.py  icqCompositeShape.py  icqCone.py  icqCylinder.py  icqDiscretizedShape.py  icqGeometry.py  icqInside.py  icqPrimitiveShape.py  icqShape.py  icqSphere.py  icqTriangulation.py  icqUniformGrid.py  rotateShape.py  sqCylinder.py  sqGeometry.py  sqSphere.py  translateShape.py
tools/mesh/: icqTriangulation.py
util/: __init__.py  icqDataFetcher.py  icqSharedLibraryUtils.py
